# baseball-hydra

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: data.yaml  mtl.yaml  mtl_ros.yaml  ros.yaml
data/: .gitignore
data/projections/: projections_mtl_2026.csv
scripts/: benchmark_ros.py  benchmark_vs_public.py  generate_projections.py  generate_ros_projections.py  run_ablation.py
src/data/: backtest.py  build_snapshots.py  fetch_all.py  fetch_batting.py  fetch_context.py  fetch_game_logs.py  fetch_projections.py  fetch_raw_statcast.py  fetch_speed.py  fetch_statcast.py  merge.py  rate_helpers.py  splits.py
src/eval/: metrics.py  pa_projection.py  plots.py  report.py  ros_metrics.py
src/features/: __init__.py  batting.py  context.py  in_season.py  non_contact.py  pipeline.py  registry.py  statcast.py  temporal.py
src/models/: utils.py
src/models/baselines/: shrinkage.py
src/models/mtl/: __init__.py  dataset.py  loss.py  model.py  train.py
src/models/mtl_ros/: __init__.py  (+5 more)
tests/: test_backtest.py  test_benchmark_ros.py  test_benchmark_ros_phase2.py  test_benchmark_ros_phase3.py  test_data_pipeline.py  test_features.py  test_in_season_features.py  test_mtl.py  test_mtl_ros_dataset.py  test_mtl_ros_loss.py  test_mtl_ros_model.py  test_mtl_ros_splits.py  test_mtl_ros_train.py  test_non_contact_features.py  test_plots_and_predictions.py  test_projections.py  test_ros_metrics.py  test_ros_sequence_dataset.py  test_ros_sequence_features.py  test_ros_sequence_model.py  test_ros_sequence_train.py  test_shrinkage.py  test_weekly_snapshots.py
(+5 files in other folders)
